@@ -19,6 +19,21 @@ language/english/global.php
 ---------------------------
 -  define('_IMPRESSCMS_PREFS','Preferences');
 
+===================================================
+# Directory: modules/system/language/english/
+===================================================
+modinfo.php
+---------------------------
++    define('_MI_SYSTEM_BNAME19', "Content Tags");
++    define("_MI_SYSTEM_ADMENU22", "Adsense");
++    define("_MI_SYSTEM_ADMENU23", "Ratings");
++    define("_MI_SYSTEM_ADMENU24", "MimeTypes");
+    
++    define('_MI_SYSTEM_BNAME101', "System Warnings");
++    define('_MI_SYSTEM_BNAME102', "Control Panel");
++    define('_MI_SYSTEM_BNAME103', "Modules Installed");
++    define('_MI_SYSTEM_BLOCK_BOOKMARKS','My Bookmarks');
++    define('_MI_SYSTEM_BLOCK_BOOKMARKS_DESC','Things I have bookmarked');
 
 ImpressCMS 1.1.1 (changes from ImpressCMS 1.1)
 =========================================
