@@ -2,7 +2,7 @@
 // $Id: system_blocks.php 1129 2007-10-24 09:45:47Z dugris $
 /**
 * Good ol' system blocks
-* 
+*
 * @copyright	http://www.xoops.org/ The XOOPS Project
 * @copyright	XOOPS_copyrights.txt
 * @copyright	http://www.impresscms.org/ The ImpressCMS Project
@@ -606,5 +606,74 @@ function b_system_themes_edit($options)
     $form .= "<input type='text' name='options[1]' value='".$options[1]."' />";
     return $form;
 }
+/**
+ * Gathers and displays the current user's bookmarks
+ * @since 1.2
+ * @return array Array of bookmark links for the current user
+ */
+function b_system_bookmarks_show()
+{
+    global $xoopsConfig, $xoopsUser;
 
+    if ( file_exists( ICMS_ROOT_PATH."/language/".$xoopsConfig['language']."/notification.php" ) ) {
+		include_once ICMS_ROOT_PATH."/language/".$xoopsConfig['language']."/notification.php";
+	} else {
+		include_once ICMS_ROOT_PATH."/language/english/notification.php";
+	}
+    // User must be logged in
+    if (empty($xoopsUser)) {
+        return false; // do not display block
+    }
+    // Get an array of all notifications for the selected user
+
+    $notification_handler =& xoops_gethandler('notification');
+    $notifications =& $notification_handler->getByUser($xoopsUser->getVar('uid'));
+
+    // Generate the info for the template
+
+    $module_handler =& xoops_gethandler('module');
+
+    $prev_modid = -1;
+
+    $prev_item = -1;
+    foreach ($notifications as $n) {
+        $modid = $n->getVar('not_modid');
+        if ($modid != $prev_modid) {
+            $prev_modid = $modid;
+
+            $prev_item = -1;
+            $module =& $module_handler->get($modid);
+			$module_name = $module->getVar('name');
+            // Get the lookup function, if exists
+            $not_config = $module->getInfo('notification');
+            $lookup_func = '';
+            if (!empty($not_config['lookup_file'])) {
+                $lookup_file = ICMS_ROOT_PATH . '/modules/' . $module->getVar('dirname') . '/' . $not_config['lookup_file'];
+                if (file_exists($lookup_file)) {
+                    include_once $lookup_file;
+                    if (!empty($not_config['lookup_func']) && function_exists($not_config['lookup_func'])) {
+                        $lookup_func = $not_config['lookup_func'];
+                    }
+                }
+            }
+        }
+
+        $category = $n->getVar('not_category');
+        $item = $n->getVar('not_itemid');
+        if ($item != $prev_item) {
+            $prev_item = $item;
+            if (!empty($lookup_func)) {
+                $item_info = $lookup_func($category, $item);
+            } else {
+                $item_info = array ('name'=>'['._NOT_NAMENOTAVAILABLE.']', 'url'=>'');
+            }
+        }
+
+		if ($n->getVar('not_event') == 'bookmark') {
+	        $block[] = array ('name'=>$item_info['name'], 'url'=>$item_info['url'], 'module_name'=>$module_name);
+	        }
+    }
+
+    return $block;
+}
 ?>
