@@ -45,7 +45,7 @@ define("_MI_SYSTEM_ADMENU13", "Images Manager");
 define("_MI_SYSTEM_ADMENU14", "Avatars");
 define("_MI_SYSTEM_ADMENU15", "Templates");
 define("_MI_SYSTEM_ADMENU16", "Comments");
-// Version Added 
+// Version Added
 define("_MI_SYSTEM_ADMENU17", "Version");
 define("_MI_SYSTEM_ADMENU18", "Content Manager");
 define("_MI_SYSTEM_ADMENU19", "Block Positions");
@@ -61,4 +61,6 @@ define("_MI_SYSTEM_ADMENU24", "MimeTypes");
 define('_MI_SYSTEM_BNAME101', "System Warnings");
 define('_MI_SYSTEM_BNAME102', "Control Panel");
 define('_MI_SYSTEM_BNAME103', "Modules Installed");
+define('_MI_SYSTEM_BLOCK_BOOKMARKS','My Bookmarks');
+define('_MI_SYSTEM_BLOCK_BOOKMARKS_DESC','Things I have bookmarked');
 ?>
